--- a/index.template.html
+++ b/index.template.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-<link href="css/main.be9a15eaed2a1f797fd6.css" rel="stylesheet"></head>
+	<title>{{title}}</title>
+	{{{meta}}}
+</head>
 <body>
-	
-<script type="text/javascript" src="js/main.4bafb37c8676836fa83a.js"></script></body>
+    <!--vue-ssr-outlet-->
+</body>
 </html>
